# argz-gesture-based-calculator

./: README.md  setup.cfg
src/argz-gesture-based-calculator/: example_code.py  finger.py  test.ipynb
src/argz-gesture-based-calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
